Utworzono za pomocą Colaboratory

--- a/DF.ipynb
+++ b/DF.ipynb
@@ -133,10 +133,10 @@
       ],
       "metadata": {
         "id": "uNBg_33Ss1zS",
-        "outputId": "aa6829b3-db67-481a-e5c9-e0210dc2d897",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "aa6829b3-db67-481a-e5c9-e0210dc2d897"
       },
       "execution_count": 25,
       "outputs": [
@@ -769,10 +769,10 @@
       "execution_count": 49,
       "metadata": {
         "id": "kEgQssi2nJ-0",
-        "outputId": "af051a32-935e-40c3-f90b-5765852e755f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "af051a32-935e-40c3-f90b-5765852e755f"
       },
       "outputs": [
         {
@@ -803,10 +803,10 @@
       "execution_count": 50,
       "metadata": {
         "id": "z72j6RvbnJ-0",
-        "outputId": "dfcf7e30-71b5-4983-8970-b9ed9e88d291",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dfcf7e30-71b5-4983-8970-b9ed9e88d291"
       },
       "outputs": [
         {
@@ -837,10 +837,10 @@
       "execution_count": 51,
       "metadata": {
         "id": "yMy53TpNnJ-0",
-        "outputId": "32d2c338-d94c-4b32-f657-50aedbd87b6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "32d2c338-d94c-4b32-f657-50aedbd87b6f"
       },
       "outputs": [
         {
@@ -874,10 +874,10 @@
       "execution_count": 53,
       "metadata": {
         "id": "5qztecq2nJ-1",
-        "outputId": "4ee05f87-5f6d-4ead-e363-d10af93c91b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4ee05f87-5f6d-4ead-e363-d10af93c91b5"
       },
       "outputs": [
         {
@@ -907,11 +907,11 @@
       "execution_count": 129,
       "metadata": {
         "id": "6j821Xc1nJ-1",
-        "outputId": "c9d2cbe6-8a25-4d0b-8d8a-75f7c35805a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 634
-        }
+        },
+        "outputId": "c9d2cbe6-8a25-4d0b-8d8a-75f7c35805a4"
       },
       "outputs": [
         {
@@ -1392,11 +1392,11 @@
       "execution_count": 137,
       "metadata": {
         "id": "N9zHQORfnJ-4",
-        "outputId": "2bd3760b-6353-4acb-84b5-1f2eebcdb0be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 396
-        }
+        },
+        "outputId": "2bd3760b-6353-4acb-84b5-1f2eebcdb0be"
       },
       "outputs": [
         {
@@ -1426,11 +1426,11 @@
       "execution_count": 138,
       "metadata": {
         "id": "ez_9IVMenJ-5",
-        "outputId": "3e68b824-4aa9-4dda-f814-d947bce0fdcd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 396
-        }
+        },
+        "outputId": "3e68b824-4aa9-4dda-f814-d947bce0fdcd"
       },
       "outputs": [
         {
@@ -1601,10 +1601,10 @@
       "execution_count": 114,
       "metadata": {
         "id": "HczeIMvxnJ-6",
-        "outputId": "c59c1778-5e99-4fee-e83d-bcb0c647e693",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c59c1778-5e99-4fee-e83d-bcb0c647e693"
       },
       "outputs": [
         {
@@ -1658,11 +1658,11 @@
       "execution_count": 83,
       "metadata": {
         "id": "OFSVGU9onJ-6",
-        "outputId": "310e5025-af6d-4996-9f08-a88ea9960e55",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "310e5025-af6d-4996-9f08-a88ea9960e55"
       },
       "outputs": [
         {
@@ -1697,10 +1697,10 @@
       "execution_count": 141,
       "metadata": {
         "id": "0Iz5KxdTnJ-6",
-        "outputId": "2659eae3-c806-4ee6-eff0-2b37a05dfe0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2659eae3-c806-4ee6-eff0-2b37a05dfe0d"
       },
       "outputs": [
         {
@@ -1723,10 +1723,10 @@
       "execution_count": 140,
       "metadata": {
         "id": "o81HR-zInJ-6",
-        "outputId": "afd46a6d-be91-4f21-8a86-d6beef7a33c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "afd46a6d-be91-4f21-8a86-d6beef7a33c7"
       },
       "outputs": [
         {
@@ -1758,10 +1758,10 @@
       "execution_count": 142,
       "metadata": {
         "id": "cf47J1rBnJ-6",
-        "outputId": "ca571f35-17eb-4d44-e42b-0e7afa9c9d61",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ca571f35-17eb-4d44-e42b-0e7afa9c9d61"
       },
       "outputs": [
         {
@@ -1806,10 +1806,10 @@
       "execution_count": 145,
       "metadata": {
         "id": "iVyo7_aznJ-7",
-        "outputId": "0954b506-5dd9-4b97-dd54-fa7faa225e44",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0954b506-5dd9-4b97-dd54-fa7faa225e44"
       },
       "outputs": [
         {
@@ -1843,11 +1843,11 @@
       "execution_count": 146,
       "metadata": {
         "id": "WjOJH0oynJ-7",
-        "outputId": "66d2f250-028f-4abf-c37d-394dd562c363",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 469
-        }
+        },
+        "outputId": "66d2f250-028f-4abf-c37d-394dd562c363"
       },
       "outputs": [
         {
@@ -1874,10 +1874,10 @@
       "execution_count": 148,
       "metadata": {
         "id": "nkCcBayInJ-7",
-        "outputId": "f1385388-9124-40bf-c269-256c755b2d8e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f1385388-9124-40bf-c269-256c755b2d8e"
       },
       "outputs": [
         {
@@ -1942,10 +1942,10 @@
       "execution_count": 147,
       "metadata": {
         "id": "RCSKiE0gnJ-7",
-        "outputId": "a148c2ab-6b94-4242-f941-967aeb51790c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a148c2ab-6b94-4242-f941-967aeb51790c"
       },
       "outputs": [
         {
@@ -2232,10 +2232,10 @@
       "execution_count": 150,
       "metadata": {
         "id": "FoAMF85CnJ--",
-        "outputId": "2de822e2-0bc1-4624-b475-87aa1316308a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2de822e2-0bc1-4624-b475-87aa1316308a"
       },
       "outputs": [
         {
@@ -2276,10 +2276,10 @@
       "execution_count": 151,
       "metadata": {
         "id": "VIEf2lBvnJ--",
-        "outputId": "298910ae-d2ee-4c0f-d973-03e46cf6b952",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "298910ae-d2ee-4c0f-d973-03e46cf6b952"
       },
       "outputs": [
         {
@@ -2320,10 +2320,10 @@
       "execution_count": 152,
       "metadata": {
         "id": "Sko5zJTAnJ--",
-        "outputId": "7580e0df-e0c5-40f2-8149-a4039dff0b80",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7580e0df-e0c5-40f2-8149-a4039dff0b80"
       },
       "outputs": [
         {
@@ -2797,10 +2797,10 @@
       "execution_count": 154,
       "metadata": {
         "id": "PqrODKSGnJ_D",
-        "outputId": "fa6f90b3-c621-4738-fadd-aa270b08aec6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fa6f90b3-c621-4738-fadd-aa270b08aec6"
       },
       "outputs": [
         {
@@ -2839,10 +2839,10 @@
       "execution_count": 160,
       "metadata": {
         "id": "dRgcFwHRnJ_E",
-        "outputId": "924feab1-2263-4729-f354-351e4f7054d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "924feab1-2263-4729-f354-351e4f7054d6"
       },
       "outputs": [
         {
@@ -3490,12 +3490,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 185,
       "metadata": {
-        "id": "65OvkF2VnJ_P"
+        "id": "65OvkF2VnJ_P",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f0290b1f-c615-4eff-a0a0-2b933e43e7ff"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+----------------------+\n",
+            "| name|substring(name, -2, 2)|\n",
+            "+-----+----------------------+\n",
+            "|Chris|                    is|\n",
+            "|Alice|                    ce|\n",
+            "|Betty|                    ty|\n",
+            "|  Dan|                    an|\n",
+            "| Greg|                    eg|\n",
+            "+-----+----------------------+\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "empHist.select('name', f.substring('name', -2,2)).distinct().show()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3547,7 +3570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 186,
       "metadata": {
         "id": "CKMuvr3jnJ_T"
       },
@@ -3568,11 +3591,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 187,
       "metadata": {
-        "id": "lC1hS8L7nJ_T"
+        "id": "lC1hS8L7nJ_T",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9cff2996-49d1-4b08-cd4b-8d5c853330b8"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+-------+----+-------+---------+\n",
+            "| name| salary|year|company|nameCount|\n",
+            "+-----+-------+----+-------+---------+\n",
+            "|Alice|4404.23|2005|      X|        7|\n",
+            "|Alice| 3000.0|2005|      Y|        7|\n",
+            "|Alice|4780.34|2006|      X|        7|\n",
+            "|Alice|4881.72|2007|      X|        7|\n",
+            "|Alice|5280.86|2008|      X|        7|\n",
+            "|Alice|5976.68|2009|      Z|        7|\n",
+            "|Alice|6320.14|2010|      Z|        7|\n",
+            "|Betty|4138.01|2005|      Y|        6|\n",
+            "|Betty|4376.94|2006|      Y|        6|\n",
+            "|Betty|5117.68|2007|      X|        6|\n",
+            "|Betty|5630.26|2008|      X|        6|\n",
+            "|Betty|6222.57|2009|      X|        6|\n",
+            "|Betty|6623.97|2010|      X|        6|\n",
+            "|Chris|3601.42|2005|      X|        6|\n",
+            "|Chris|4015.66|2006|      X|        6|\n",
+            "|Chris|4304.73|2007|      X|        6|\n",
+            "|Chris|4650.33|2008|      X|        6|\n",
+            "|Chris|4932.86|2009|      X|        6|\n",
+            "|Chris|5869.98|2010|      X|        6|\n",
+            "|  Dan|4262.75|2005|      Y|        6|\n",
+            "|  Dan|4829.28|2006|      Y|        6|\n",
+            "|  Dan|5204.81|2007|      Y|        6|\n",
+            "|  Dan|6244.11|2008|      Z|        6|\n",
+            "|  Dan|7642.18|2009|      Z|        6|\n",
+            "|  Dan|9906.35|2010|      Z|        6|\n",
+            "| Greg|4226.89|2005|      Y|        5|\n",
+            "| Greg|4935.72|2007|      Y|        5|\n",
+            "| Greg|5274.04|2008|      Y|        5|\n",
+            "| Greg|6227.36|2009|      X|        5|\n",
+            "| Greg|6033.33|2010|      Z|        5|\n",
+            "+-----+-------+----+-------+---------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# definicja 'okna'\n",
         "windowSpec = Window.partitionBy('name')\n",
@@ -3741,12 +3810,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 204,
       "metadata": {
-        "id": "Al0sSb-4nJ_U"
+        "id": "Al0sSb-4nJ_U",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "147b9bbc-76a2-4ad3-9956-45275d707572"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+-------+----+-------+------------------+------------------+\n",
+            "| name| salary|year|company|        moving_avg|         substract|\n",
+            "+-----+-------+----+-------+------------------+------------------+\n",
+            "|Alice|4404.23|2005|      X|          3702.115| 702.1149999999998|\n",
+            "|Alice| 3000.0|2005|      Y|          3702.115|-702.1149999999998|\n",
+            "|Alice|4780.34|2006|      X| 4061.523333333333| 718.8166666666671|\n",
+            "|Alice|4881.72|2007|      X|         4266.5725|          615.1475|\n",
+            "|Alice|5280.86|2008|      X|           4469.43| 811.4299999999994|\n",
+            "|Alice|5976.68|2009|      Z| 4720.638333333333| 1256.041666666667|\n",
+            "|Alice|6320.14|2010|      Z| 4949.138571428572|1371.0014285714287|\n",
+            "|Betty|4138.01|2005|      Y|           4138.01|               0.0|\n",
+            "|Betty|4376.94|2006|      Y|          4257.475|119.46499999999924|\n",
+            "|Betty|5117.68|2007|      X|           4544.21| 573.4700000000003|\n",
+            "|Betty|5630.26|2008|      X|         4815.7225| 814.5375000000004|\n",
+            "|Betty|6222.57|2009|      X|          5097.092|          1125.478|\n",
+            "|Betty|6623.97|2010|      X| 5351.571666666667|1272.3983333333335|\n",
+            "|Chris|3601.42|2005|      X|           3601.42|               0.0|\n",
+            "|Chris|4015.66|2006|      X|           3808.54| 207.1199999999999|\n",
+            "|Chris|4304.73|2007|      X|3973.9366666666665|330.79333333333307|\n",
+            "|Chris|4650.33|2008|      X|          4143.035| 507.2950000000001|\n",
+            "|Chris|4932.86|2009|      X|            4301.0| 631.8599999999997|\n",
+            "|Chris|5869.98|2010|      X| 4562.496666666667|1307.4833333333327|\n",
+            "|  Dan|4262.75|2005|      Y|           4262.75|               0.0|\n",
+            "|  Dan|4829.28|2006|      Y| 4546.014999999999| 283.2650000000003|\n",
+            "|  Dan|5204.81|2007|      Y| 4765.613333333334| 439.1966666666667|\n",
+            "|  Dan|6244.11|2008|      Z|         5135.2375|1108.8724999999995|\n",
+            "|  Dan|7642.18|2009|      Z|          5636.626|          2005.554|\n",
+            "|  Dan|9906.35|2010|      Z| 6348.246666666667|3558.1033333333335|\n",
+            "| Greg|4226.89|2005|      Y|           4226.89|               0.0|\n",
+            "| Greg|4935.72|2007|      Y|          4581.305|354.41499999999996|\n",
+            "| Greg|5274.04|2008|      Y| 4812.216666666667| 461.8233333333328|\n",
+            "| Greg|6227.36|2009|      X|5166.0025000000005|1061.3574999999992|\n",
+            "| Greg|6033.33|2010|      Z| 5339.468000000001| 693.8619999999992|\n",
+            "+-----+-------+----+-------+------------------+------------------+\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "windowSpec = Window.partitionBy(\"name\").orderBy(\"year\")\n",
+        "\n",
+        "empHist \\\n",
+        "  .withColumn(\"moving_avg\", f.avg(f.col(\"salary\")).over(windowSpec)) \\\n",
+        "  .withColumn(\"substract\",  f.col(\"salary\") - f.col(\"moving_avg\")) \\\n",
+        "  .show(30)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3777,12 +3899,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 205,
       "metadata": {
-        "id": "56u0EqPmnJ_U"
+        "id": "56u0EqPmnJ_U",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ff414940-a186-4d6f-908b-0e4572ca60c2"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+-------+----+-------+------------------+\n",
+            "| name| salary|year|company|        moving_avg|\n",
+            "+-----+-------+----+-------+------------------+\n",
+            "|Alice|4404.23|2005|      X|              null|\n",
+            "|Alice| 3000.0|2005|      Y|              null|\n",
+            "|Alice|4780.34|2006|      X|          3702.115|\n",
+            "|Alice|4881.72|2007|      X| 4061.523333333333|\n",
+            "|Alice|5280.86|2008|      X| 4831.030000000001|\n",
+            "|Alice|5976.68|2009|      Z|           5081.29|\n",
+            "|Alice|6320.14|2010|      Z|           5628.77|\n",
+            "|Betty|4138.01|2005|      Y|              null|\n",
+            "|Betty|4376.94|2006|      Y|           4138.01|\n",
+            "|Betty|5117.68|2007|      X|          4257.475|\n",
+            "|Betty|5630.26|2008|      X|4747.3099999999995|\n",
+            "|Betty|6222.57|2009|      X|           5373.97|\n",
+            "|Betty|6623.97|2010|      X|          5926.415|\n",
+            "|Chris|3601.42|2005|      X|              null|\n",
+            "|Chris|4015.66|2006|      X|           3601.42|\n",
+            "|Chris|4304.73|2007|      X|           3808.54|\n",
+            "|Chris|4650.33|2008|      X|          4160.195|\n",
+            "|Chris|4932.86|2009|      X|           4477.53|\n",
+            "|Chris|5869.98|2010|      X| 4791.594999999999|\n",
+            "|  Dan|4262.75|2005|      Y|              null|\n",
+            "|  Dan|4829.28|2006|      Y|           4262.75|\n",
+            "|  Dan|5204.81|2007|      Y| 4546.014999999999|\n",
+            "|  Dan|6244.11|2008|      Z|          5017.045|\n",
+            "|  Dan|7642.18|2009|      Z|           5724.46|\n",
+            "|  Dan|9906.35|2010|      Z|          6943.145|\n",
+            "| Greg|4226.89|2005|      Y|              null|\n",
+            "| Greg|4935.72|2007|      Y|           4226.89|\n",
+            "| Greg|5274.04|2008|      Y|           4935.72|\n",
+            "| Greg|6227.36|2009|      X|           5104.88|\n",
+            "| Greg|6033.33|2010|      Z|            5750.7|\n",
+            "+-----+-------+----+-------+------------------+\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "windowSpec = Window.partitionBy(\"name\").orderBy(\"year\").rangeBetween(-2,-1)\n",
+        "empHist \\\n",
+        "  .withColumn(\"moving_avg\", f.avg(f.col(\"salary\")).over(windowSpec)) \\\n",
+        "  .show(30)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4085,11 +4258,11 @@
       "execution_count": 161,
       "metadata": {
         "id": "zOJ2HWdenJ_X",
-        "outputId": "c5b4a578-4bde-45b2-ced9-0cdbf8cb8699",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 670
-        }
+        },
+        "outputId": "c5b4a578-4bde-45b2-ced9-0cdbf8cb8699"
       },
       "outputs": [
         {
