Utworzono za pomocą Colaboratory

--- a/DF.ipynb
+++ b/DF.ipynb
@@ -1845,7 +1845,7 @@
         "id": "WjOJH0oynJ-7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 469
+          "height": 451
         },
         "outputId": "66d2f250-028f-4abf-c37d-394dd562c363"
       },
@@ -4207,24 +4207,83 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 207,
       "metadata": {
-        "id": "brJLW56bnJ_W"
+        "id": "brJLW56bnJ_W",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "856e0106-d7e1-43e6-ea12-74875f1d3be1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+--------------------+\n",
+            "|               value|\n",
+            "+--------------------+\n",
+            "|          MOBY DICK;|\n",
+            "|                    |\n",
+            "|                    |\n",
+            "|      or, THE WHALE.|\n",
+            "|                    |\n",
+            "|                    |\n",
+            "|CHAPTER 1. Loomings.|\n",
+            "|                    |\n",
+            "|Call me Ishmael. ...|\n",
+            "|little or no mone...|\n",
+            "|shore, I thought ...|\n",
+            "|the world. It is ...|\n",
+            "|the circulation. ...|\n",
+            "|whenever it is a ...|\n",
+            "|myself involuntar...|\n",
+            "|the rear of every...|\n",
+            "|such an upper han...|\n",
+            "|prevent me from d...|\n",
+            "|knocking people’s...|\n",
+            "|sea as soon as I ...|\n",
+            "+--------------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "rawMD = spark.read.text(\"MobyDick.txt\")\n",
+        "rawMD = spark.read.text(\"data/MobyDick.txt\")\n",
         "rawMD.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 217,
       "metadata": {
-        "id": "T828JuaEnJ_X"
+        "id": "T828JuaEnJ_X",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 226
+        },
+        "outputId": "1e8c2d44-1946-4725-f084-af336d6e088a"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-217-3ab1f34cffd9>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtextOnlyMD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrawMD\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlength\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'value'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m   \u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'value'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlike\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'MOBY DICK%'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'CHAPTER%'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: like() takes 2 positional arguments but 3 were given"
+          ]
+        }
+      ],
+      "source": [
+        "textOnlyMD = rawMD \\\n",
+        "  .filter(~(f.length(f.col('value'))==0))\\\n",
+        "  .filter(~f.col('value'). ('MOBY DICK%','CHAPTER%'))\\\n",
+        "  .show()"
+      ]
     },
     {
       "cell_type": "code",
