--- a/introduce.ipynb
+++ b/introduce.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuBuMil7cVtAo6sCnl0kUA",
+      "authorship_tag": "ABX9TyNaxtN1zg/Yxb2cpRTq/W6L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2659,14 +2659,16 @@
         "auc_tr = roc_auc_score(y_train, pred_tr) * 100\n",
         "auc_te = roc_auc_score(y_test, pred_te) * 100\n",
         "\n",
-        "print(np.round([auc_tr, auc_te], 2))"
+        "print(np.round([auc_tr, auc_te], 2))\n",
+        "\n",
+        "//https://mateuszgrzyb.pl/klasyfikacja-z-uzyciem-glebokiej-sieci-neuronowej/"
       ],
       "metadata": {
-        "id": "sAo5JekausTe",
-        "outputId": "a25844cf-2392-435b-c8b6-52dcf329045e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sAo5JekausTe",
+        "outputId": "a25844cf-2392-435b-c8b6-52dcf329045e"
       },
       "execution_count": 24,
       "outputs": [
