--- a/introduce.ipynb
+++ b/introduce.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNaxtN1zg/Yxb2cpRTq/W6L",
+      "authorship_tag": "ABX9TyO/PtPbPMaWIZoABUZNGH+a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2528,6 +2528,86 @@
             "+---+--------+----------+----------------+-----------+-----------------------+-----+---------+-----------+------------+-----------------------+------------------------------------------------+-------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----+-----+---+\n",
             "only showing top 10 rows\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#REGRESJA LINIOWA\n",
+        "#https://miroslawmamczur.pl/jak-dziala-regresja-liniowa-i-czy-warto-ja-stosowac/\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.metrics import mean_squared_error, r2_score\n",
+        "\n",
+        "df = pd.read_csv('/content/kalorie.csv', sep=';')\n",
+        "df.sample(5)\n",
+        "\n",
+        "\n",
+        "model = LinearRegression()\n",
+        "\n",
+        "X = df[['Masa']]\n",
+        "y = df['kalorie_koktajl']\n",
+        "\n",
+        "model.fit(X,y, sample_weight=None)\n",
+        "y_pred = model.predict(X)\n",
+        "\n",
+        "print('coefficients: ', model.coef_)\n",
+        "print('intercept: ', model.intercept_)\n",
+        "print('Root Mean Squared Error (RMSE): %.2f'% np.sqrt(mean_squared_error(y, y_pred)))\n",
+        "print('Coefficient of determination: %.2f'% r2_score(y, y_pred))\n",
+        "\n",
+        "X = df[['Masa','%bialka_w_koktajlu']]\n",
+        "y = df['kalorie_koktajl']\n",
+        "\n",
+        "model.fit(X,y, sample_weight=None)\n",
+        "y_pred = model.predict(X)\n",
+        "\n",
+        "print('coefficients: ', model.coef_)\n",
+        "print('intercept: ', model.intercept_)\n",
+        "print('Root Mean Squared Error (RMSE): %.2f'% np.sqrt(mean_squared_error(y, y_pred)))\n",
+        "print('Coefficient of determination: %.2f'% r2_score(y, y_pred))\n",
+        "\n",
+        "X = df[['Bialka', 'Tluszcze', 'Weglowodany']]\n",
+        "y = df['kalorie_koktajl']\n",
+        "\n",
+        "model.fit(X,y)\n",
+        "y_pred = model.predict(X)\n",
+        "\n",
+        "print('coefficients: ', model.coef_)\n",
+        "print('intercept: ', model.intercept_)\n",
+        "print('Root Mean Squared Error (RMSE): %.2f'% np.sqrt(mean_squared_error(y, y_pred)))\n",
+        "print('Coefficient of determination: %.2f'% r2_score(y, y_pred))"
+      ],
+      "metadata": {
+        "id": "o0yY7RaZ7LVn",
+        "outputId": "46251cd6-932f-4140-c397-84ac797e7f79",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "coefficients:  [4.12697095]\n",
+            "intercept:  40.33609958506227\n",
+            "Root Mean Squared Error (RMSE): 93.15\n",
+            "Coefficient of determination: 0.47\n",
+            "coefficients:  [  4.14430929 -51.92442285]\n",
+            "intercept:  40.4737859070934\n",
+            "Root Mean Squared Error (RMSE): 93.15\n",
+            "Coefficient of determination: 0.47\n",
+            "coefficients:  [4.19983042 8.39193832 3.8964542 ]\n",
+            "intercept:  139.08940086474263\n",
+            "Root Mean Squared Error (RMSE): 5.34\n",
+            "Coefficient of determination: 1.00\n"
           ]
         }
       ]
